[gd_scene load_steps=5 format=3 uid="uid://cv80nethatnrh"]

[ext_resource type="Script" path="res://World/Objects/Shop.gd" id="1_np7dv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p6vio"]
size = Vector3(0.283954, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a43qa"]
transparency = 1
albedo_color = Color(0.0156863, 1, 0, 0.121569)

[sub_resource type="BoxMesh" id="BoxMesh_tk54g"]
material = SubResource("StandardMaterial3D_a43qa")

[node name="ItemBuy" type="Area3D"]
script = ExtResource("1_np7dv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_p6vio")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("BoxMesh_tk54g")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="ammobox_entered"]
[connection signal="body_exited" from="." to="." method="itembox_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
